huffman coding/log
huffman.h:1:9: warning: #pragma once in main file
 #pragma once
         ^~~~
huffman.cpp: In function 'Node* buildTree(const char*)':
huffman.cpp:51:39: error: base operand of '->' has non-pointer type 'FrequencyTable'
         Node *leaf = createNode(ftable->data[i].first, ftable->data[i].second);
                                       ^~
huffman.cpp:51:62: error: base operand of '->' has non-pointer type 'FrequencyTable'
         Node *leaf = createNode(ftable->data[i].first, ftable->data[i].second);
                                                              ^~
huffman.cpp:58:41: error: 'peekBegin' was not declared in this scope
     Node *result = peekBegin(secondQueue);
                                         ^
huffman.cpp: In function 'char* encode(HuffmanTree*, const char*)':
huffman.cpp:129:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < alphabet; i++)
                     ~~^~~~~~~~~~
huffman.cpp:147:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < alphabet; i++)
                     ~~^~~~~~~~~~
freqtable.h:1:9: warning: #pragma once in main file
 #pragma once
         ^~~~
filesencode.h:1:9: warning: #pragma once in main file
 #pragma once
         ^~~~
make: *** [all] Error 1
